The first time I click into a Google Doc's comment field, the cursor is on the right end of the comment field and I can't enter text.
Categories
(Core :: DOM: Selection, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox137 | --- | unaffected |
| firefox138 | --- | unaffected |
| firefox139 | --- | verified |
People
(Reporter: cpeterson, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
If I select text in a Google Doc, click the button to add a new comment, then click in the comment popup's text field, my cursor will appear on the right edge of the text field and typing won't enter any text. See the attached screenshot.
If I click to change focus away and back to the text field, then the cursor will appear on the left as expected and text input will work.
Yannis bisected this regression to Emilo's fix for bug 1958639:
15:17.02 INFO: Last good revision: e6d4e3b73756c0847a99544db8b8c7480b11ae22
15:17.02 INFO: First bad revision: d1bc4a5a5404f308814581d7a7fb34ee75953404
15:17.02 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=e6d4e3b73756c0847a99544db8b8c7480b11ae22&tochange=d1bc4a5a5404f308814581d7a7fb34ee75953404
| Assignee | ||
Comment 1•1 year ago
|
||
| Assignee | ||
Comment 2•1 year ago
|
||
This is the low risk fix, but I'm not sure I understand what this code
is doing / why are we not just returning the "inner" range for all
frames, including inlines.
Updated•1 year ago
|
| Assignee | ||
Comment 3•1 year ago
|
||
Otherwise you can't insert stuff in something like an empty
inline-block, there are tests for that luckily, yay.
| Assignee | ||
Updated•1 year ago
|
Comment 6•1 year ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/c9fadced05b5
https://hg.mozilla.org/mozilla-central/rev/ec51400e8dd7
Updated•1 year ago
|
Updated•1 year ago
|
Comment 7•1 year ago
•
|
||
Reproducible on Nightly 139.0a1(2025-04-10) using Ubuntu 24.10 on Google Doc.
Verified as fixed using Ubuntu 24.10 on Beta 139.0b4 and the latest Nightly 140.0a1(2025-05-05) on Google Doc.
Description
•