Bug 1959780 - Add a missing editing host check in GetRangeForFrame. r=masayuki

This is the low risk fix, but I'm not sure I understand what this code
is doing / why are we not just returning the "inner" range for all
frames, including inlines.

Differential Revision: https://phabricator.services.mozilla.com/D245228